--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -10,12 +10,41 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'airstreamregular';
+  src: url('./fonts/Airstream-webfont.eot');
+  src: url('./fonts/Airstream-webfont.eot?#iefix') format('embedded-opentype'),
+       url('./fonts/Airstream-webfont.woff') format('woff'),
+       url('./fonts/Airstream-webfont.ttf') format('truetype'),
+       url('./fonts/LAKESHOR-webfont.svg#airstreamregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+html, body {
+  height: 100%;
+}
+
 body{
+  display: flex;
+  flex-direction: column;
+
   font-size: 10px;
   background: rgb(149,215,171);
 }
+
 a{
   text-decoration: none;
+}
+
+.main-header {
+  flex: 0 1 auto;
+}
+
+.main-content {
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .logo-text {
@@ -28,22 +57,26 @@ a{
 }
 
 .thumbnail-list {
+  flex: 0 1 auto;
+  order: 2;
+  display: flex;
+  justify-content: space-between;
   list-style: none;
   padding: 0;
-}
 
-.thumbnail-item + .thumbnail-item {
-  margin-top: 10px;
+  white-space: nowrap;
+  overflow-x: auto;
 }
 
 .thumbnail-item {
-  display: block;
+  display: inline-block;
+  min-width: 120px;
+  max-width: 120px;
   border: 1px solid rgb(100%, 100%, 100%);
   border: 1px solid rgba(100%, 100%, 100%, 0.8);
 }
 
 .thumbnail-title {
-
   /*this somehow makes the title inline with the image*/
   display: block;
   margin: 0;
@@ -55,10 +88,37 @@ a{
   font-size: 18px;
 }
 
-
 .thumbnail-image {
+  /*fits 100% of the 120px thumbnail item container*/
   width: 100%;
 
   /*this somehow makes the title inline with the image*/
   display: block;
+}
+
+.detail-image-container {
+  flex: 1 1 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.detail-image-frame {
+  position: relative;
+  text-align: center;
+}
+
+.detail-image {
+  width: 90%;
+}
+
+.detail-image-title {
+  position: absolute;
+  bottom: -16px;
+  left: 4px;
+
+  color: white;
+  text-shadow: rgba(0,0,0,0.9) 1px 2px 9px;
+  font-family: airstreamregular;
+  font-size: 40px;
 }
