--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,11 +1,7 @@
 @font-face {
   font-family: 'lakeshore';
   src: url('./fonts/LAKESHOR-webfont.eot');
-  src: url('./fonts/LAKESHOR-webfont.eot?#iefix') format('embedded-opentype'),
-       url('./fonts/LAKESHOR-webfont.woff') format('woff'),
-       url('./fonts/LAKESHOR-webfont.ttf') format('truetype'),
-       url('./fonts/Airstream-webfont.svg') format('svg');
-
+  src: url('./fonts/LAKESHOR-webfont.eot?#iefix') format('embedded-opentype'), url('./fonts/LAKESHOR-webfont.woff') format('woff'), url('./fonts/LAKESHOR-webfont.ttf') format('truetype'), url('./fonts/Airstream-webfont.svg') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -13,10 +9,7 @@
 @font-face {
   font-family: 'airstreamregular';
   src: url('./fonts/Airstream-webfont.eot');
-  src: url('./fonts/Airstream-webfont.eot?#iefix') format('embedded-opentype'),
-       url('./fonts/Airstream-webfont.woff') format('woff'),
-       url('./fonts/Airstream-webfont.ttf') format('truetype'),
-       url('./fonts/LAKESHOR-webfont.svg#airstreamregular') format('svg');
+  src: url('./fonts/Airstream-webfont.eot?#iefix') format('embedded-opentype'), url('./fonts/Airstream-webfont.woff') format('woff'), url('./fonts/Airstream-webfont.ttf') format('truetype'), url('./fonts/LAKESHOR-webfont.svg#airstreamregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -25,15 +18,14 @@ html, body {
   height: 100%;
 }
 
-body{
+body {
   display: flex;
   flex-direction: column;
-
   font-size: 10px;
-  background: rgb(149,215,171);
+  background: rgb(149, 215, 171);
 }
 
-a{
+a {
   text-decoration: none;
 }
 
@@ -50,7 +42,6 @@ a{
 .logo-text {
   background: white;
   font-family: lakeshore;
-
   text-align: center;
   text-transform: uppercase;
   font-size: 37px;
@@ -63,7 +54,6 @@ a{
   justify-content: space-between;
   list-style: none;
   padding: 0;
-
   white-space: nowrap;
   overflow-x: auto;
 }
@@ -81,17 +71,14 @@ a{
   display: block;
   margin: 0;
   padding: 4px 10px;
-
   background: rgb(96, 125, 139);
-  color: rgb(202,238,255);
-
+  color: rgb(202, 238, 255);
   font-size: 18px;
 }
 
 .thumbnail-image {
   /*fits 100% of the 120px thumbnail item container*/
   width: 100%;
-
   /*this somehow makes the title inline with the image*/
   display: block;
 }
@@ -116,9 +103,30 @@ a{
   position: absolute;
   bottom: -16px;
   left: 4px;
-
   color: white;
-  text-shadow: rgba(0,0,0,0.9) 1px 2px 9px;
+  text-shadow: rgba(0, 0, 0, 0.9) 1px 2px 9px;
   font-family: airstreamregular;
   font-size: 40px;
+}
+
+@media all and (min-width: 768px) {
+  /* Styles will go here */
+  .main-content {
+    flex-direction: row;
+    overflow: hidden;
+  }
+
+  .thumbnail-list {
+    flex-direction: column;
+    order: 0;
+    margin-left: 20px;
+  }
+
+  .thumbnail-item {
+    max-width: 260px;
+  }
+
+  .thumbnail-item + .thumbnail-item {
+    margin-top: 20px;
+  }
 }
