--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -53,7 +53,7 @@ a {
   display: flex;
   justify-content: space-between;
   list-style: none;
-  padding: 0;
+  padding: 20px 0;
   white-space: nowrap;
   overflow-x: auto;
 }
@@ -64,6 +64,12 @@ a {
   max-width: 120px;
   border: 1px solid rgb(100%, 100%, 100%);
   border: 1px solid rgba(100%, 100%, 100%, 0.8);
+
+  transition: transform 133ms ease-in-out;
+}
+
+.thumbnail-item:hover {
+  transform: scale(1.2);
 }
 
 .thumbnail-title {
@@ -96,6 +102,14 @@ a {
 .detail-image-frame {
   position: relative;
   text-align: center;
+
+  transition: transform 333ms;
+  /*transition: transform 333ms cubic-bezier(1,0.06,0.28,1);*/
+}
+
+.is-tiny {
+  transform: scale(0.001);
+  transition: transform 0ms;
 }
 
 .detail-image {
@@ -112,7 +126,25 @@ a {
   font-size: 40px;
 }
 
-@media screen and (orientation: landscape) {
+/*only when detail image container is a descendant of hidden detail*/
+/*so basically only when hidden detail is active*/
+/*basically we'll turn it off and on to see everything else turn off and on*/
+.hidden-detail .detail-image-container {
+  display: none;
+}
+/*only when thumbnail list is a descendant of hidden detail*/
+/*also order of css matters. the farther down this page...
+the override happens*/
+.hidden-detail .thumbnail-list {
+  flex-direction: column;
+  align-items: center;
+}
+/*only when thumbnail item is a descendant of hidden detail*/
+.hidden-detail .thumbnail-item {
+  max-width: 80%;
+}
+/*@media screen and (orientation: landscape) */
+@media all and (min-width: 768px) {
   /* Styles will go here */
   .main-content {
     flex-direction: row;
@@ -123,6 +155,7 @@ a {
     flex-direction: column;
     order: 0;
     margin-left: 20px;
+    padding: 0 35px;
   }
 
   .thumbnail-item {
